--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^2.31.0
   google_fonts: ^6.2.1
+  google_sign_in: ^6.2.1
+  firebase_auth: ^4.20.0
 
 dev_dependencies:
   flutter_test:
