--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^6.2.1
   google_sign_in: ^6.2.1
   firebase_auth: ^4.20.0
+  # for accessing the database in firebase
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
