--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  
+  #integrating firebase
   firebase_core: ^2.31.0
+  
+  #for google fonts
   google_fonts: ^6.2.1
+
+  #for google sign in
   google_sign_in: ^6.2.1
+
+  #firebase authentication
   firebase_auth: ^4.20.0
+
   # for accessing the database in firebase
   cloud_firestore: ^4.17.5
+
+  #for showing network image
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
