--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
 
   #image picker
   image_picker: ^1.1.2
+
+  #for accesing firebase storage for uploading files
   firebase_storage: ^11.7.7
 
 dev_dependencies:
